--- a/index.html
+++ b/index.html
@@ -2,8 +2,13 @@
 <html>
 <head>
     <title>date testing</title>
+    <!-- 1. Load platform support before any code that touches the DOM. -->
+    <script src="bower_components/webcomponentsjs/webcomponents.min.js"></script>
+    <!-- 2. Load the component using an HTML Import -->
+    <link rel="import" href="elements/simpledate.html">
 </head>
 <body>
+    <date-element></date-element>
     <!--
     A simple date widget - YYYY/MM/DD
     -->
