Renamed component and added new component.

--- a/elements/simpledate.html
+++ b/elements/simpledate.html
@@ -1,6 +1,6 @@
 <link rel="import" href="..\bower_components/polymer/polymer.html">
 
-<polymer-element name="date-element" noscript>
+<polymer-element name="simpledate-element" noscript>
     <template>
         <style media="screen">
             #date {
