--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <link rel="import" href="elements/simpledate.html">
 </head>
 <body>
-    <date-element></date-element>
     <!--
     A simple date widget - YYYY/MM/DD
     -->
+    <simpledate-element></simpledate-element>
     <!--
     Script tags placed at the end of the body allow the markup to render faster because script tags are loaded synchronously
     -->
