--- a/elements/simpledate.html
+++ b/elements/simpledate.html
@@ -3,6 +3,9 @@
 <polymer-element name="simpledate-element" noscript>
     <template>
         <style media="screen">
+            input[type="text"] {
+                text-align: right;
+            }
             #date {
                 width: 100%;
             }
@@ -16,13 +19,13 @@
         <div id="date">
             <span>Date: </span>
             <span>
-                <input id="date-element-year" type="text" name="txtYear" value="{{year}}" placeholder="yyyy" autofocus> <strong>/</strong>
+                <input id="date-element-year" type="text" name="txtYear" value="{{year}}" placeholder="yyyy" maxlength="4" autofocus> <strong>/</strong>
             </span>
             <span>
-                <input id="date-element-month" type="text" name="txtMonth" value="{{month}}" placeholder="mm"> <strong>/</strong>
+                <input id="date-element-month" type="text" name="txtMonth" value="{{month}}" placeholder="mm" maxlength="2"> <strong>/</strong>
             </span>
             <span>
-                <input id="date-element-day" type="text" name="txtDay" value="{{day}}" placeholder="dd">
+                <input id="date-element-day" type="text" name="txtDay" value="{{day}}" placeholder="dd" maxlength="2">
             </span>
         </div>
     </template>
