--- a/elements/simpledate.html
+++ b/elements/simpledate.html
@@ -1,10 +1,21 @@
+<!--
+    Todo:
+    1) Add a getter named 'isValid' and set it to boolean whenever the date is changed.
+-->
 <link rel="import" href="..\bower_components/polymer/polymer.html">
 
-<polymer-element name="simpledate-element" noscript>
+<polymer-element name="simpledate-element" attributes="fontsize year month day" noscript>
     <template>
         <style media="screen">
             input[type="text"] {
                 text-align: right;
+                font-size: {{fontsize}}
+            }
+            .pseudolabel {
+                font-size: {{fontsize}}
+            }
+            .separator {
+                font-size: {{fontsize}}
             }
             #date {
                 width: 100%;
@@ -17,12 +28,14 @@
             }
         </style>
         <div id="date">
-            <span>Date: </span>
+            <span class="pseudolabel">Date: </span>
             <span>
-                <input id="date-element-year" type="text" name="txtYear" value="{{year}}" placeholder="yyyy" maxlength="4" autofocus> <strong>/</strong>
+                <input id="date-element-year" type="text" name="txtYear" value="{{year}}" placeholder="yyyy" maxlength="4" autofocus>
+                <strong class="separator">/</strong>
             </span>
             <span>
-                <input id="date-element-month" type="text" name="txtMonth" value="{{month}}" placeholder="mm" maxlength="2"> <strong>/</strong>
+                <input id="date-element-month" type="text" name="txtMonth" value="{{month}}" placeholder="mm" maxlength="2">
+                <strong class="separator">/</strong>
             </span>
             <span>
                 <input id="date-element-day" type="text" name="txtDay" value="{{day}}" placeholder="dd" maxlength="2">
