--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!--
     A simple date widget - YYYY/MM/DD
     -->
-    <simpledate-element fontsize="3em" year="2014" month="11" day="28"></simpledate-element>
+    <simpledate-element fontsize="3em" datecolor="#f00" year="2014" month="11" day="28"></simpledate-element>
     <!--
     Script tags placed at the end of the body allow the markup to render faster because script tags are loaded synchronously
     -->
