--- a/elements/simpledate.html
+++ b/elements/simpledate.html
@@ -4,7 +4,7 @@
 -->
 <link rel="import" href="..\bower_components/polymer/polymer.html">
 
-<polymer-element name="simpledate-element" attributes="fontsize datecolor labelcolor yearcolor monthcolor daycolor separatorcolor year month day" noscript>
+<polymer-element name="simpledate-element" attributes="fontsize datecolor labelcolor yearcolor monthcolor daycolor separatorcolor year month day">
     <template>
         <style media="screen">
             input[type="text"] {
@@ -51,5 +51,13 @@
                 <input id="date-element-day" type="text" name="txtDay" value="{{day}}" placeholder="dd" maxlength="2">
             </span>
         </div>
+        <script>
+        (function(){
+            "use strict";
+            Polymer({
+
+            });
+        }());
+        </script>
     </template>
 </polymer-element>
