Coding more of dropdowndate.html.

--- a/elements/dropdowndate.html
+++ b/elements/dropdowndate.html
@@ -1,9 +1,10 @@
 <link rel="import" href="..\bower_components/polymer/polymer.html">
+<script src="../javascript/datevalidation.js"></script>
 
-<polymer-element name="date-element" noscript>
+<polymer-element name="dropdowndate-element" noscript>
     <template>
     <style media="screen">
-    #date {
+    /*#date {
         width: 100%;
     }
     #date-element-year {
@@ -11,7 +12,7 @@
     }
     #date-element-month, #date-element-day {
         width: 1.7em;
-    }
+    }*/
     </style>
     <div id="date">
         <span>Date: </span>
