--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <script src="bower_components/webcomponentsjs/webcomponents.min.js"></script>
     <!-- 2. Load the component using an HTML Import -->
     <link rel="import" href="elements/simpledate.html">
+    <link rel="import" href="elements/dropdowndate.html">
 </head>
 <body>
     <!--
@@ -13,8 +14,13 @@
     -->
     <simpledate-element fontsize="3em" datecolor="#f00" year="2014" month="11" day="28"></simpledate-element>
     <!--
+    A dropdown-based date widget
+    -->
+    <dropdowndate-element></simpledate-element>
+    <!--
     Script tags placed at the end of the body allow the markup to render faster because script tags are loaded synchronously
     -->
+    <!--
     <script src="javascript/datevalidation.js"></script>
     <script>
     (function(w){
@@ -28,5 +34,6 @@
         console.log('isDateValid returned', dv.isDateValid(n.getFullYear(), n.getMonth(), n.getDay()));
     }(window));
     </script>
+    -->
 </body>
 </html>
