--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script src="bower_components/webcomponentsjs/webcomponents.min.js"></script>
     <!-- 2. Load the component using an HTML Import -->
     <link rel="import" href="elements/simpledate.html">
-    <link rel="import" href="elements/dropdowndate.html">
+    <!-- <link rel="import" href="elements/dropdowndate.html"> -->
 </head>
 <body>
     <!--
@@ -16,7 +16,7 @@
     <!--
     A dropdown-based date widget
     -->
-    <dropdowndate-element></simpledate-element>
+    <!-- <dropdowndate-element></simpledate-element> -->
     <!--
     Script tags placed at the end of the body allow the markup to render faster because script tags are loaded synchronously
     -->
