--- a/elements/simpledate.html
+++ b/elements/simpledate.html
@@ -10,16 +10,18 @@
     <template>
         <style media="screen">
             input[type="text"] {
-                text-align: right;
+                text-align: center;
                 font-size: {{fontsize}};
             }
             .pseudolabel {
                 font-size: {{fontsize}};
                 color: {{labelcolor || datecolor}};
+                text-shadow: 6px 6px 6px rgba(0, 0, 0, 0.2);
             }
             .separator {
                 font-size: {{fontsize}};
                 color: {{separatorcolor}};
+                text-shadow: 6px 6px 6px rgba(0, 0, 0, 0.2);
             }
             #date {
                 width: 100%;
@@ -28,15 +30,18 @@
             #date-element-year {
                 width: 2.7em;
                 color: {{yearcolor || datecolor}};
+                text-shadow: 6px 6px 6px rgba(0, 0, 0, 0.2);
             }
             #date-element-month, #date-element-day {
                 width: 1.7em;
             }
             #date-element-month {
                 color: {{monthcolor || datecolor}};
+                text-shadow: 6px 6px 6px rgba(0, 0, 0, 0.2);
             }
             #date-element-day {
                 color: {{daycolor || datecolor}};
+                text-shadow: 6px 6px 6px rgba(0, 0, 0, 0.2);
             }
         </style>
         <div id="date">
@@ -53,39 +58,44 @@
                 <input id="date-element-day" type="text" name="txtDay" value="{{day}}" placeholder="dd" maxlength="2">
             </span>
         </div>
+        <content></content>
     </template>
-        <script>
-        (function(w){
-            "use strict";
-            var dv = w.ejr.dateValidation;
-            Polymer({
-                year: "",
-                month: "",
-                day: "",
-                isValid: false,
-                observe: {
-                    year: "isDateValid",
-                    month: "isDateValid",
-                    day: "isDateValid"
-                },
-                // Returns true if date is valid, otherwise returns false.
-                isDateValid: function() {
-                     this.isValid = dv.isDateValid(parseInt(this.year, 10), parseInt(this.month, 10), parseInt(this.day, 10));
-                     console.log("isDateValid =", this.isValid);
-                     if(this.isValid){
-                         console.log("new Date =", this.getDate());
-                         console.log("date as string =", this.getDateAsString());
-                     }
-                },
-                // Create and returns a Date object if the date is valid, otherwise returns undefined.
-                getDate: function() {
-                    return this.isValid && new Date(parseInt(this.year), parseInt(this.month - 1), parseInt(this.day)) || void(0);
-                },
-                // Returns a Date as a string if the date is valid, otherwise returns undefined.
-                getDateAsString: function() {
-                    return this.isValid && Date(parseInt(this.year), parseInt(this.month - 1), parseInt(this.day)) || void(0);
-                }
-            });
-        }(window));
-        </script>
+    <script>
+    (function(w){
+        "use strict";
+        var dv = w.ejr.dateValidation;
+        Polymer("simpledate-element", {
+            year: "",
+            month: "",
+            day: "",
+            isValid: false,
+            observe: {
+                year: "isDateValid",
+                month: "isDateValid",
+                day: "isDateValid"
+            },
+            // Returns true if date is valid, otherwise returns false.
+            // Fires a custom event 'datechanged'.
+            isDateValid: function() {
+                 this.isValid = dv.isDateValid(parseInt(this.year, 10), parseInt(this.month, 10), parseInt(this.day, 10));
+                 console.log("isDateValid =", this.isValid);
+                 if(this.isValid){
+                     console.log("new Date =", this.getDate());
+                     console.log("date as string =", this.getDateAsString());
+                 }
+                 // Polymer convenience method for node.dispatchEvent().
+                 this.fire("datechanged", {isValid: this.isValid});
+            },
+            // Create and returns a Date object if the date is valid, otherwise returns undefined.
+            getDate: function() {
+                return this.isValid && new Date(parseInt(this.year), parseInt(this.month - 1), parseInt(this.day)) || void(0);
+            },
+            // Returns a Date as a string if the date is valid, otherwise returns undefined.
+            getDateAsString: function() {
+                // return this.isValid && Date(parseInt(this.year), parseInt(this.month - 1), parseInt(this.day)) || void(0);
+                return this.isValid && new Date(parseInt(this.year), parseInt(this.month - 1).toString(), parseInt(this.day)) || void(0);
+            }
+        });
+    }(window));
+    </script>
 </polymer-element>
