--- a/index.html
+++ b/index.html
@@ -12,12 +12,9 @@
     <!--
     A simple date widget - YYYY/MM/DD
     -->
-    <simpledate-element id="sd" fontsize="3em" datecolor="#000" separatorcolor="#00f" yearcolor="#f00" year="2014" monthcolor="#f00"  month="11" daycolor="#f00" day="28">
-
-    </simpledate-element>
-
+    <simpledate-element id="sd" fontsize="3em" datecolor="#000" separatorcolor="#00f" yearcolor="#f00"
+    year="2014" monthcolor="#f00"  month="11" daycolor="#f00" day="28"></simpledate-element>
     <div id="dateinfo"></div>
-
     <script>
     (function(){
         "use strict";
