--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <!-- 2. Load the component using an HTML Import -->
     <link rel="import" href="elements/simpledate.html">
     <!-- <link rel="import" href="elements/dropdowndate.html"> -->
+    <style>
+        #dateinfo {
+            margin-top: 20px;
+            padding: 1rem;
+            border: solid 2px #ccc;
+            font-size: 1.3rem;
+            text-shadow: 6px 6px 6px rgba(0, 0, 0, 0.2);
+        }
+    </style>
 </head>
 <body>
     <!--
