--- a/elements/simpledate.html
+++ b/elements/simpledate.html
@@ -8,7 +8,7 @@
 
 <polymer-element name="simpledate-element" attributes="fontsize datecolor labeltext labelcolor yearcolor monthcolor daycolor separatorcolor year month day">
     <template>
-        <style media="screen">
+        <style>
             input[type="text"] {
                 text-align: center;
                 font-size: {{fontsize}};
