--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
 <head>
     <title>date testing</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <!-- 1. Load platform support before any code that touches the DOM. -->
     <script src="bower_components/webcomponentsjs/webcomponents.min.js"></script>
     <!-- 2. Load the component using an HTML Import -->
-    <link rel="import" href="elements/simpledate.html">
+    <link rel="import" href="./elements/simpledate.html">
     <!-- <link rel="import" href="elements/dropdowndate.html"> -->
     <style>
         #dateinfo {
@@ -17,7 +18,7 @@
         }
     </style>
 </head>
-<body>
+<body unresolved>
     <!--
     A simple date widget - YYYY/MM/DD
     -->
