--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             border: solid 2px #ccc;
             font-size: 1.3rem;
             text-shadow: 6px 6px 6px rgba(0, 0, 0, 0.2);
+            box-shadow: 6px 6px 6px rgba(0, 0, 0, 0.2);
         }
     </style>
 </head>
