--- a/index.html
+++ b/index.html
@@ -21,10 +21,13 @@
 </head>
 <body unresolved>
     <!--
-    A simple date widget - YYYY/MM/DD
+    A custom date element.
     -->
     <simpledate-element id="sd" fontsize="3em" labeltext="Date" datecolor="#000" separatorcolor="#00f" yearcolor="#f00"
         year="2014" monthcolor="#f00"  month="11" daycolor="#f00" day="28"></simpledate-element>
+    <!--
+    A container to display the output of the custom date element.
+    -->
     <div id="dateinfo"></div>
     <script>
     (function(){
