Removed borders from year, month and day input elements.

--- a/elements/simpledate.html
+++ b/elements/simpledate.html
@@ -12,6 +12,7 @@
             input[type="text"] {
                 text-align: center;
                 font-size: {{fontsize}};
+                border: none;
             }
             .pseudolabel {
                 font-size: {{fontsize}};
