Defaulting labeltext to "Date" if not provided by user.

--- a/elements/simpledate.html
+++ b/elements/simpledate.html
@@ -41,7 +41,7 @@
             }
         </style>
         <div id="date">
-            <span class="pseudolabel">{{labeltext}}: </span>
+            <span class="pseudolabel">{{labeltext || "Date"}}: </span>
             <span>
                 <input id="date-element-year" type="text" name="txtYear" value="{{year}}" placeholder="yyyy" maxlength="4" autofocus>
                 <strong class="separator">/</strong>
