--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     <!--
     A custom date element.
     -->
-    <simpledate-element id="sd" fontsize="3em" labeltext="Date" datecolor="#000" separatorcolor="#aaa" yearcolor="#00f"
-        year="2014" monthcolor="#00f"  month="11" daycolor="#00f" day="28"></simpledate-element>
+    <simple-date id="sd" fontsize="3em" labeltext="Date" datecolor="#000" separatorcolor="#aaa" yearcolor="#00f"
+        year="2014" monthcolor="#00f"  month="11" daycolor="#00f" day="28"></simple-date>
     <!--
     A container to display the output of the custom date element.
     -->
