Added attribution comments.

--- a/elements/simpledate.html
+++ b/elements/simpledate.html
@@ -1,3 +1,4 @@
+<!-- By Jeffrey Schwartz - Licensed under MIT -->
 <link rel="import" href="../bower_components/polymer/polymer.html">
 <script src="../javascript/datevalidation.js"></script>
 
